<resources>
    <string name="app_name">Friendly IF</string>
    <string name="app_info">Friendly IF information</string>
    <string name="google_app_id">AIzaSyDJXsBp-s0B7mwB2HtaBkoFAsE319cWHwM</string>

    <string name="title_activity_maps">Map</string>
    <string name="no_name">Без Назви</string>
    <string name="action_settings">Settings</string>

    <string name="wait_please">Зачекайте будь ласка...</string>
    <string name="current_location">Поточне розташування</string>
    <string name="center_IF">Центр</string>
    <string name="current_location_not_available">Ваше поточне розташування недоступне...</string>
    <string name="location_permissions_needed">Для відображення поточного місцеположення потрібний дозвіл</string>

    <string name="drawer_item_all">Всі</string>
    <string name="drawer_item_pharmacy">Аптеки</string>
    <string name="drawer_item_hospital">Лікарні та поліклініки</string>
    <string name="drawer_item_shop">Магазини</string>
    <string name="drawer_item_atm">Банкомати</string>
    <string name="drawer_item_settings">Налаштування</string>
    <string name="drawer_item_about">Про програму</string>
    <string name="drawer_item_how_its_work">Як це працює?</string>

    <string name="settings_title">Налаштування</string>
    <string name="about_title">Про програму</string>
    <string name="how_its_work_title">Як це працює?</string>

    <string name="unavailable_buildings">Недоступні будівлі</string>
    <string name="inaccessible_buildings">Малодоступні будівлі</string>
    <string name="available_buildings">Доступні будівлі</string>

    <string name="unavailable_buildings_description">Недоступні будівлі - це будівлі, до котрих неможливо потрапити на візку без сторонньої допомоги. Такі будівлі позначені червоним;</string>
    <string name="inaccessible_buildings_description">Малодоступні будівлі - це будівлі, котрі мають так звані пандуси, проте вони незручні та робилися більше для вигляду, ніж для зручності. Ці будівлі позначені жовтим;</string>
    <string name="available_buildings_description">Доступні будівлі - це такі будівлі, до котрих людям з обмеженими можливостями а також з дитячим візочком можна безперешкодно потрапити. Колір таких будівель - зелений.</string>

    <string name="description1">Програма розроблена для відображення наявності та якості пандусів до будівель Івано-Франківська. Дані для програми беруться з сервісу</string>
    <string name="http_open_street_map_url">http://www.openstreetmap.org</string>
    <string name="open_street_map_url">www.openstreetmap.org</string>
    <string name="description2">кожен бажаючий може змінити їх</string>
    <string name="go_to_site">Ви справді бажаєте перейти на сайт?</string>
    <string name="btn_yes">Так</string>
    <string name="btn_no">Ні</string>
    <string name="OSM_license">Дана програма містить інформацію з OpenStreetMap, яка надається під Open Database License (ODbL)</string>

    <string name="map_settings">Налаштування карти</string>
    <string name="limit_city_area">Обмежити карту</string>
    <string name="limit_city_area_desription">Переглядати карту лише в межах міста</string>
    <string name="go">Перейти</string>
    <string name="location_settings">Налаштування локації</string>

    <string name="enable_current_location">Відображати місцеположення</string>
    <string name="enable_current_location_desription">Показувати на карті поточне власне місцеположення за допомогою GPS навігації</string>
    <string name="enable_update_current_location">Слідкувати за місцеположенням</string>
    <string name="enable_update_current_location_desription">Робота в режимі GPS навігатора</string>
    <string name="enable_update_current_location_checkbox_id">current_location_checkbox_id</string>
    <string name="city_list_preference_id">city_list_preference_id</string>

    <string name="location_error">Помилка визначення локації</string>
    <string name="gps_not_supported">GPS не підтримується</string>
    <string name="gps_not_enabled">GPS не ввімкнено</string>
    <string name="gps_not_enabled_settings">GPS не ввімкнено, перейдіть до налаштувань щоб увімкнути</string>
    <string name="go_to_location_settings">Ви справді бажаєте перейти до налаштувань GPS?</string>
    <string name="press_again_to_exit">Натисніть ще раз, щоб вийти</string>

    <string name="cant_detect_location">Не вдалось визначити локацію</string>
    <string name="gps_already_enabled">GPS вже ввімкнено</string>
    <string name="city_limit_message">Ви вийшли за межі міста</string>
    <string name="select_current_city">Виберіть поточне місто</string>
    <string name="select_current_city_description">Натисніть, щоб вибрати місто для відображення даних</string>

    <string-array name="cityesArray">
        <item>Івано-Франківськ</item>
        <item>Львів</item>
    </string-array>

    <string name="location_preference_checkbox_id">location_checkbox_id</string>
    <string name="map_limit_preference_checkbox_id">map_limit_checkbox_id</string>

    <string name="version">Версія</string>

    <string name="developer">Розробник:</string>
    <string name="developer_name">Романчук Ігор</string>
    <string name="developer_email">igorkoromanchuk@gmail.com</string>

    <string name="data_adding">Додавання даних:</string>
    <string name="data_adding_name_1">Дороніна Тетяна</string>
    <string name="data_adding_email_1">tanyadewdrop@gmail.com</string>

    <string name="data_adding_name_2">Гураль Ярослав</string>
    <string name="data_adding_email_2">yarik9937@gmail.com</string>

    <string name="default_error">Помилка</string>
    <string name="no_internet_connection">Немає з\'єднання з інтернетом</string>
    <string name="no_server_connection">Немає з\'єднання із сервером</string>

</resources>
