<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/dialog_text_color"
            android:textSize="24dp"
            android:textStyle="bold" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/version"
                android:textColor="@color/dialog_text_color"
                android:textSize="@dimen/about_text_size" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:gravity="center_vertical"
                android:textColor="@color/dialog_text_color"
                android:textSize="@dimen/about_text_size" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:text="@string/description1"
            android:textColor="@color/dialog_text_color"
            android:textSize="@dimen/about_text_size" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/open_street_map_url"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/about_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/OSM_license"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/dialog_text_color"
            android:textSize="@dimen/about_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/developer"
            android:textColor="@color/dialog_text_color"
            android:textSize="@dimen/about_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_name"
            android:textColor="@color/dialog_text_color"
            android:textSize="@dimen/about_text_size" />

        <TextView
            android:id="@+id/developer_email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_email"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/about_text_size" />

        <ImageView
            android:id="@+id/developer_email_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/mail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/data_adding"
            android:textColor="@color/dialog_text_color"
            android:textSize="@dimen/about_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_adding_name_1"
            android:textColor="@color/dialog_text_color"
            android:textSize="@dimen/about_text_size" />

        <TextView
            android:id="@+id/data_filler_email_txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_adding_email_1"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/about_text_size" />

        <ImageView
            android:id="@+id/data_filler_email_img_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/mail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_adding_name_2"
            android:textColor="@color/dialog_text_color"
            android:textSize="@dimen/about_text_size" />

        <TextView
            android:id="@+id/data_filler_email_txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_adding_email_2"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/about_text_size" />

        <ImageView
            android:id="@+id/data_filler_email_img_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/mail" />
    </LinearLayout>
</ScrollView>